# tclwebsocket

./: .gitignore  CMakeLists.txt  README.md  pkgIndex.tcl.in
.github/workflows/: cmake.yml  tclwebsocket-master.yml
cmake/: FindLibWebSockets.cmake
generic/: globals.cpp  lws.c  lws.cpp  lws.hpp  tclWebsocket.cpp  tclWebsocket.hpp  tclwebsocket.c  tclwebsocket.cpp  tclwebsocket.h  tclwebsocket.hpp  tclwebsockets.c  tclwebsockets.h  websocketCmd.cpp  websockets.c  websockets.h  websocketschannel.c  websocketschannel.h  wsChannel.cpp  wsChannel.hpp  wschannel.c  wschannel.cpp  wschannel.h  wschannel.hpp
tests/: 01-client-connect.test  02-client-io.test  03-options.test  loadpackage.tcl  run.tcl  source-tests.tcl
tests/tclhttpd/: README.md  run-tclhttpd.tcl
